--- a/src/main/resources/assets/chromaticenchantments/lang/en_us.json
+++ b/src/main/resources/assets/chromaticenchantments/lang/en_us.json
@@ -7,6 +7,8 @@
   "enchantment.chromaticenchantments.voiding_curse.desc": "Blocks mined and mobs slain by this tool will not drop items. Experience drops are unaffected.",
   "enchantment.chromaticenchantments.persistence": "Persistence",
   "enchantment.chromaticenchantments.persistence.desc": "Makes the item immune to all non-void damage when dropped.",
+  "enchantment.chromaticenchantments.riding": "Riding",
+  "enchantment.chromaticenchantments.riding.desc": "While grounded, mounts arrows which have been fired at full power.",
 
   "stat.chromaticenchantments.conservation_fireworks_saved": "Fireworks Conserved",
   "stat.chromaticenchantments.drops_voided": "Drops Voided"
